--- a/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.njk
+++ b/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.njk
@@ -403,25 +403,8 @@ thinking</em
 </h3>
 {% citationsmarginales "LOWE, Kristen. <em>Everyone is Building Something</em>. Extrait de la
 newsletter <a href='https://workbravely.substack.com/p/everyone-is-building-something'>Work Bravely</a>. 2024. [consulté le 20 Juin 2024].", "en" %}Regardless of where you sit in an organization, if you’re in a role that owns a project or program of any type (or a piece of one), you are working on a product. Your customers might be your coworkers, and you probably call your product development lifecycle a change management or project management framework. But regardless of how you describe it, your work still involves picking, designing, testing, and launching something for someone else to use. Kind of sounds like product development, no?{% endcitationsmarginales %}
-<p>
-  Dans le secteur de la transformation organisationnelle, nous sommes peu
-  habitués à considérer l’objet de notre travail comme un <em>produit</em>. En
-  effet, que ce soit à travers un cycle de développement de projet, un
-  diagnostic ou un plan d’action stratégique, la posture commune est plutôt
-  celle d’un <em>travailleur de la connaissance</em>
 
-{% citationsmarginales "Le terme <em>travailleur de la connaissance</em> désigne un employé dont le travail consiste à développer et utiliser du savoir en back office plutôt que de produire des marchandises ou des services. Celui-ci est apparu en premier dans l’ouvrage The Landmarks of Tomorrow (1959) de Peter Drucker ‘knowledge work’" %}{% endcitationsmarginales %} 
-qui analyse et qui confronte peu ses projections au terrain. Pourtant, adopter
-  le <em>mode produit</em> confère de nombreux avantages à un projet, et c’est
-  ce que nous allons détailler ci-dessous. Mais qu’est-ce que le
-  <em>mode produit</em> ?
-  <a
-    href="https://t-ziegelbecker.medium.com/a-summary-of-inspired-by-marty-cagan-9d94e1eeb4bd"
-    >Marty Cagan, un des premiers théoriciens du mode produit</a
-  >
-  explique que l’approche “produit” repose sur une fondation essentielle : pour
-  construire quoique ce soit qui apporte de la valeur il faut en découvrir
-  beaucoup sur la personne pour laquelle vous construisez. Il est nécessaire de
+<p>Dans le champ de la transformation organisationnelle, l’objet du travail est rarement considéré comme un <em>produit</em>. En effet, que ce soit à travers un cycle de développement de projet, un diagnostic ou un plan d’action stratégique, la posture commune est plutôt celle d’un <em>travailleur de la connaissance</em>{% citationsmarginales "Le terme travailleur de la connaissance désigne un employé dont le travail consiste à développer et utiliser du savoir en back office plutôt que de produire des marchandises ou des services. Celui-ci est apparu en premier dans l’ouvrage The Landmarks of Tomorrow 1959 de Peter Drucker - knowledge work" %}{% endcitationsmarginales %} qui analyse et qui confronte peu ses projections au terrain. Pourtant, adopter le <em>mode produit</em> confère de nombreux avantages à un projet, et c’est ce que nous allons détailler ci-dessous. Mais qu’est-ce que le <em>mode produit</em> ? <a href="https://t-ziegelbecker.medium.com/a-summary-of-inspired-by-marty-cagan-9d94e1eeb4bd">Marty Cagan, un des premiers théoriciens du mode produit</a> explique que l’approche “produit” repose sur une fondation essentielle : pour construire quoique ce soit qui apporte de la valeur il faut en découvrir beaucoup sur la personne pour laquelle vous construisez. Il est nécessaire de
   tester les idées afin de séparer les idées bonnes des mauvaises avant
   d’engager le premier effort de production. Il reproche au modèle de gestion de
   projet traditionnel en
@@ -432,8 +415,6 @@ qui analyse et qui confronte peu ses projections au terrain. Pourtant, adopter
   personne destinée à utiliser les fruits du projet : des collègues, un
   département, des fournisseurs, des clients…
 </p>
-
-
 <p>
   Envisager un projet de transformation organisationnelle sous l’approche
   <em>produit</em> permet de centrer l’approche sur le besoin réel des parties
@@ -653,10 +634,7 @@ les tâches sont effectuées réellement.{% endcitationsmarginales %}
 <em
   >Innovation organisationnelle &amp; transformation managériale par le design
   thinking</em
->. Paris : CreateSpace Independent Publishing Platform, 2011, p.86" %}Le prototypage a un fort pouvoir fédérateur, particulièrement lors de la
-    co-conception. Il est créateur et porteur de sens pour les gens qui l’ont
-    conçu, mais aussi pour ceux à qui il s’adresse et qui le comprennent, ce qui
-    peut être un atout dans le cadre de la gestion du changement.{% endcitationsmarginales %}
+>. Paris : CreateSpace Independent Publishing Platform, 2011, p.86" %}Le prototypage a un fort pouvoir fédérateur, particulièrement lors de la co-conception. Il est créateur et porteur de sens pour les gens qui l’ont conçu, mais aussi pour ceux à qui il s’adresse et qui le comprennent, ce qui peut être un atout dans le cadre de la gestion du changement.{% endcitationsmarginales %}
 <ul>
   <li>
     <strong
@@ -679,13 +657,7 @@ les tâches sont effectuées réellement.{% endcitationsmarginales %}
     interne par les collaborateurs.
   </li>
 </ul>
-{% citationsmarginales "MARCHAL, Aurélie.
-<em
-  >Ibid</em
->.p.65" %}Le développement d’une innovation ne repose pas sur la qualité intrinsèque
-    des inventions mais sur la capacité collective des acteurs à leur donner
-    sens et usage. […] Les inventions doivent venir du corps social concerné
-    pour qu’elles puissent être transformées en innovation.{% endcitationsmarginales %}
+{% citationsmarginales "MARCHAL, Aurélie. <em>Ibid</em>.p.65" %}Le développement d’une innovation ne repose pas sur la qualité intrinsèque des inventions mais sur la capacité collective des acteurs à leur donner sens et usage. […] Les inventions doivent venir du corps social concerné pour qu’elles puissent être transformées en innovation.{% endcitationsmarginales %}
 <ul>
   <li>
     <strong
@@ -813,16 +785,7 @@ les tâches sont effectuées réellement.{% endcitationsmarginales %}
   définition des axes de travail.
 </p>
 <h4 id="co-création">Co-création</h4>
-<p>
-  Le praticien imagine et définit, en co-construction avec un panel de
-  <em>parties prenantes</em
-  >{% citationsmarginales "Je parle bien ici de parties prenantes et non pas d’usager pour inciter à
-  incorporer des cibles non-usagères issues du département (chef de service,
-  toute personne qui a une influence sur la partie d’organisation)" %}{% endcitationsmarginales %}, les propositions concrètes pour répondre aux pistes de travail identifiées
-  à l’étape précédente. Le but n’est pas tellement de générer des idées mais
-  plutôt d’impliquer les parties prenantes dans le processus et surtout de
-  sélectionner tous ensemble la meilleure approche à adopter.
-</p>
+<p>Le praticien imagine et définit, en co-construction avec un panel de <em>parties prenantes</em>{% citationsmarginales "Je parle bien ici de parties prenantes et non pas d’usager pour inciter à incorporer des cibles non-usagères issues du département : chef de service, toute personne qui a une influence sur la partie d’organisation" %}{% endcitationsmarginales %}, les propositions concrètes pour répondre aux pistes de travail identifiées à l’étape précédente. Le but n’est pas tellement de générer des idées mais plutôt d’impliquer les parties prenantes dans le processus et surtout de sélectionner tous ensemble la meilleure approche à adopter.</p>
 <p>Il a à sa disposition différentes approches :</p>
 <ol type="1">
   <li>
@@ -931,7 +894,7 @@ les tâches sont effectuées réellement.{% endcitationsmarginales %}
     Identification des goulots d’étranglements organisationnels provoqués par le
     scénario de changement. Le test permet de mettre en évidence les complexités
     qui seront induites par le changement. Les donnés rassemblées lors du test
-    sont à corréler avec les KPI{% citationsmarginales "Indicateurs Clés de Performance" %}{% endcitationsmarginales %}
+    sont à corréler avec les <abbr>KPI</abbr> (Key Performance Indicator)
     fixés par les commanditaires du projet de transformation pour estimer s’il
     est viable de lancer le changement.
   </li>
