acessibilty & html semantic(sidenotes & toc)

--- a/src/_includes/blogpost_layout.njk
+++ b/src/_includes/blogpost_layout.njk
@@ -15,7 +15,7 @@ pageId: "blogpost"
           {% include "mobilenav.html"%}
           {% include "navigation.njk" %}
         </header>
-        <aside>{{ content | toc | safe }}</aside>
+        {{ content | toc | safe }}
         <main class="post-main">
           <article id="post">
             <header>
