--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -1,5 +1,4 @@
 <meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="{{ description }}" />
 <link rel="stylesheet" href="/css/style.css" />
@@ -20,16 +19,7 @@
   type="application/atom+xml"
 />
 
-<!--Favicon-->
 <link rel="icon" href="/favicon/favicon.svg" />
-
-<!--Theme-->
-<meta
-  name="msapplication-TileColor"
-  content="#c3e2ff"
-  media="(prefers-color-scheme: dark)"
-/>
-
 
 <!--Social-->
 <link href="https://twitter.com/teotimepacreau" rel="me"/>
@@ -54,7 +44,7 @@
 <meta property="og:title" content="{{ title }}" />
 <meta property="og:description" content="{{ description }}" />
 <meta name="topic" content="Numérique, Nantes, web, développement, gestion de projet, management, UI, Indieweb, AMOA, conduite de projets numériques">
-<meta name="keywords" content="Numérique, Nantes, web, développement, frontend, backend, gestion de projet, management, UI, Indieweb, AMOA"/>
+<meta name="keywords" content="Numérique, Nantes, web, développement, AMOA, frontend, backend, gestion de projet, management, UI, Indieweb, AMOA"/>
 <meta name="author" content="Téotime Pacreau" />
 <meta name="owner" content="Téotime Pacreau">
 
