--- a/src/css/style.css
+++ b/src/css/style.css
@@ -234,7 +234,7 @@ input {
   font-family: "Inter-Variable-Italic";
   font-weight: 100 900;
   font-display: swap;
-  font-feature-settings: "calt" 1, "case" 1, "dlig" 1, "ss01" 1, "ss02" 1, "ss03" 1, "cv10" 1;
+  font-feature-settings: "opsz" 14, "calt" 1, "case" 1, "dlig" 1, "ss01" 1, "ss02" 1, "ss03" 1, "cv10" 1;
   src: url("../fonts/InterVariable-Italic.woff2") format("woff2");
 }
 
