--- a/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.njk
+++ b/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.njk
@@ -404,7 +404,7 @@ thinking</em
 {% citationsmarginales "LOWE, Kristen. <em>Everyone is Building Something</em>. Extrait de la
 newsletter <a href='https://workbravely.substack.com/p/everyone-is-building-something'>Work Bravely</a>. 2024. [consulté le 20 Juin 2024].", "en" %}Regardless of where you sit in an organization, if you’re in a role that owns a project or program of any type (or a piece of one), you are working on a product. Your customers might be your coworkers, and you probably call your product development lifecycle a change management or project management framework. But regardless of how you describe it, your work still involves picking, designing, testing, and launching something for someone else to use. Kind of sounds like product development, no?{% endcitationsmarginales %}
 
-<p>Dans le champ de la transformation organisationnelle, l’objet du travail est rarement considéré comme un <em>produit</em>. En effet, que ce soit à travers un cycle de développement de projet, un diagnostic ou un plan d’action stratégique, la posture commune est plutôt celle d’un <em>travailleur de la connaissance</em>{% citationsmarginales "Le terme travailleur de la connaissance désigne un employé dont le travail consiste à développer et utiliser du savoir en back office plutôt que de produire des marchandises ou des services. Celui-ci est apparu en premier dans l’ouvrage The Landmarks of Tomorrow 1959 de Peter Drucker - knowledge work" %}{% endcitationsmarginales %} qui analyse et qui confronte peu ses projections au terrain. Pourtant, adopter le <em>mode produit</em> confère de nombreux avantages à un projet, et c’est ce que nous allons détailler ci-dessous. Mais qu’est-ce que le <em>mode produit</em> ? <a href="https://t-ziegelbecker.medium.com/a-summary-of-inspired-by-marty-cagan-9d94e1eeb4bd">Marty Cagan, un des premiers théoriciens du mode produit</a> explique que l’approche “produit” repose sur une fondation essentielle : pour construire quoique ce soit qui apporte de la valeur il faut en découvrir beaucoup sur la personne pour laquelle vous construisez. Il est nécessaire de
+<p>Dans le champ de la transformation organisationnelle, l’objet du travail est rarement considéré comme un <em>produit</em>. En effet, que ce soit à travers un cycle de développement de projet, un diagnostic ou un plan d’action stratégique, la posture commune est plutôt celle d’un <em>travailleur de la connaissance</em>{% citationsmarginales "Le terme travailleur de la connaissance désigne un collaborateur dont le travail consiste à développer et utiliser du savoir en back office plutôt que de produire des marchandises ou des services. Celui-ci est apparu en premier dans l’ouvrage The Landmarks of Tomorrow 1959 de Peter Drucker - knowledge work" %}{% endcitationsmarginales %} qui analyse et qui confronte peu ses projections au terrain. Pourtant, adopter le <em>mode produit</em> confère de nombreux avantages à un projet, et c’est ce que nous allons détailler ci-dessous. Mais qu’est-ce que le <em>mode produit</em> ? <a href="https://t-ziegelbecker.medium.com/a-summary-of-inspired-by-marty-cagan-9d94e1eeb4bd">Marty Cagan, un des premiers théoriciens du mode produit</a> explique que l’approche “produit” repose sur une fondation essentielle : pour construire quoique ce soit qui apporte de la valeur il faut en découvrir beaucoup sur la personne pour laquelle vous construisez. Il est nécessaire de
   tester les idées afin de séparer les idées bonnes des mauvaises avant
   d’engager le premier effort de production. Il reproche au modèle de gestion de
   projet traditionnel en
@@ -755,7 +755,7 @@ les tâches sont effectuées réellement.{% endcitationsmarginales %}
   </li>
   <li>
     Collecte des données organisationnelles du département (quantification du
-    temps passé sur chaque type de tâche, budget, taux de rotation des employés,
+    temps passé sur chaque type de tâche, budget, taux de rotation des collaborateurs,
     benchmark, étude de marchés, feedback clients…).
   </li>
   <li>
@@ -848,7 +848,7 @@ les tâches sont effectuées réellement.{% endcitationsmarginales %}
   <li>
     La mise en scène d’une nouvelle approche front-office pour dynamiser
     l’expérience client via une maquette en jouets mobiles utilisable par les
-    employés occupant actuellement les positions représentées
+    collaborateurs occupant actuellement les positions représentées
   </li>
 </ol>
 <p>
@@ -900,7 +900,7 @@ les tâches sont effectuées réellement.{% endcitationsmarginales %}
   </li>
   <li>Estimation des nouvelles compétences, rôles, et postes requis.</li>
   <li>
-    Cartographie des changements induits sur la collaboration des employés (qui
+    Cartographie des changements induits sur la collaboration des collaborateurs (qui
     va collaborer avec qui, qui aura besoin des données de qui, qui attend la
     validation de qui).
   </li>
