blog(tableau post)

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,6 +1,6 @@
 <address>
   <a
-    href="mailto:teotime.pac@outlook.fr?subject=Demande de contact depuis teotimepacreau.fr"
+    href="mailto:teotime.pac@outlook.fr?subject=Demande_de_contact_depuis_teotimepacreau.fr"
     >teotime.pac<span style="display: none;">anti</span>&#64;<span class="hidden" style="display: none;"
       >spam</span
     >outlook.fr</a
