css (table scollbars)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -322,7 +322,7 @@ a:hover {
 
 /*---SCROLLBAR---*/
 ::-webkit-scrollbar {
-  width: 0.4rem;
+  width: .4rem;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -749,16 +749,14 @@ a:hover {
 }
 
 #ecoindex-score {
-  color: #00101d;
+  color: var(--bg);
   display: grid;
   place-items: center;
-  text-align: center;
   background-color: #34bc6e;
-  border-radius: 50%;
   width: 1.4rem;
   height: 1.4rem;
   aspect-ratio: 1;
-  font-weight: 600;
+  font-variation-settings: "opsz" 14, "wght" 650;
 }
 
 /*---BLOG LIST PAGE---*/
@@ -1520,7 +1518,7 @@ hr {
 /*---TABLES---*/
 table {
   border-collapse: collapse;
-  font-variant-numeric: tabular-nums;
+  font-variant-numeric: lining-nums tabular-nums;
 }
 
 thead {
@@ -1546,6 +1544,17 @@ caption {
 tr {
   border-bottom: 1px solid var(--txt);
   background-color: var(--bglighten10);
+}
+
+/* --- Table-specific scrollbar --- */
+.table-wrapper::-webkit-scrollbar {
+  margin-block-start: 1rem;
+  height: .3rem;
+}
+
+
+.table-wrapper::-webkit-scrollbar-track {
+  background: var(--bglighten20);
 }
 
 /*---RESPONSIVE TABLES ON MOBILE : pour que ça fonctionne nécessaire que chaque td ait un attribute 'data-cell' qui soit égal au th de sa colonne, par exemple : th "job-title", td doit être <td data-cell="job-title">---*/
